@@ -5,6 +5,9 @@ apt (0.9.7.6) UNRELEASED; urgency=low
     - ensure that dependencies for packages:none are always generated
     - add 3 missing remap registrations causing a segfault in case
       we use the not remapped iterators after a move of the mmap again
+  * apt-pkg/pkgcache.cc:
+    - ignore negative dependencies applying in the same group for
+      M-A:same packages on the real package name as self-conflicts
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 19 Sep 2012 11:29:56 +0200
 
